# pynab-ha

./: .dockerignore  CONTRIBUTING.md  PROTOCOL.md  README.md  install.sh  pyproject.toml  requirements-asr-legacy.txt  requirements-assist.txt  requirements.txt  setup
.github/workflows/: arm-runner.yml  tests.yml
Docker/: docker-compose.yml
Docker/nab/: Dockerfile
docs/: ASSIST_SATELLITE_STUDY.md  HOME_ASSISTANT_CONTROL.md  MODERNIZATION.md
nabairqualityd/tests/: nabairqualityd_test.py
nabassistd/: __init__.py  audio.py  capture.py  client.py  config.py  diagnostics.py  feedback.py  models.py  nabassistd.conf  nabassistd.py  nabassistd.service  pipeline.py  playback.py  processor.py  urls.py  views.py
nabassistd/migrations/: 0001_initial.py
nabassistd/tests/: test_audio.py  test_capture.py  test_client.py  test_config.py  test_diagnostics.py  test_feedback.py  test_nabassistd.py  test_pipeline.py  test_playback.py  test_views.py  test_wakeword.py
nabassistd/wakeword/: __init__.py  base.py  factory.py  micro.py  openwakeword.py  remote.py
nabboot/: nabboot.py
nabd/: nabd.py  nabio.py  sound.py  sound_alsa.py
nabd/tests/: choreography_test.py  mock.py  nabd_test.py  sound_alsa_test.py  utils.py
nabhomeassistantd/: __init__.py  config.py  discovery.py  models.py  nabd_client.py  nabhomeassistantd.conf  nabhomeassistantd.py  nabhomeassistantd.service  views.py
nabhomeassistantd/migrations/: 0001_initial.py
nabhomeassistantd/tests/: test_discovery.py  test_views.py  (+1 more)
nabmastodond/: ProposalProtocol.md  nabmastodond.py
nabweb/: settings.py  views.py
(+12 files in other folders)
