[project]
requires-python = ">=3.13,<3.15"

[tool.black]
line-length = 79

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = [
    "migrations"
]
namespace_packages = true

[[tool.mypy.overrides]]
module = ["numpy"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "nabweb.settings"
